<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="desc">desc</string>
    <string name="app_name">零公里地推</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="promotioner_add">创建新的商家</string>
    <string name="back">返回</string>
    <string name="name">名称</string>
    <string name="merchants_name">商家名称</string>
    <string name="store_name">店铺名称</string>
    <string name="idcard">负责人身份证</string>
    <string name="front_page">正面</string>
    <string name="back_page">背面</string>
    <string name="business_license">营业执照</string>
    <string name="bank">银行</string>
    <string name="bank_account">银行账号</string>
    <string name="store_location">店铺定位</string>
    <string name="get_location">获取地理位置</string>
    <string name="startlocation">正在定位中...</string>
    <string name="scope_of_delivery">送餐范围</string>
    <string name="choose_scope">选择送餐半径</string>
    <string name="phone">手机号码(商家账号)</string>
    <string name="number">手机号码</string>
    <string name="add_finish">完成创建</string>

    <string name="welcomeback">欢迎回来</string>
    <string name="phonenumber">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
</resources>
