<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/name"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_itemtop_press">
                <EditText
                    android:id="@+id/merchants_name"
                    android:paddingLeft="10dp"
                    android:textCursorDrawable="@null"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#777777"
                    android:textColorHint="#ffdddddd"
                    android:textSize="20sp"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/merchants_name"/>
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_itembottom_press">
                <EditText
                    android:id="@+id/store_name"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:textColor="#777777"
                    android:textColorHint="#ffdddddd"
                    android:textSize="20sp"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/store_name"/>
                、
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/idcard"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:background="@drawable/user_item_press">
                <ImageView
                    android:id="@+id/add_idcard_front"
                    android:contentDescription="@string/desc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_height="fill_parent"
                    android:background="@drawable/ic_launcher"
                    android:layout_marginRight="10dp"/>
                <ImageView
                    android:id="@+id/add_idcard_back"
                    android:contentDescription="@string/desc"
                    android:layout_width="0dp"
                    android:layout_margin="10dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ic_launcher"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/business_license"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:background="@drawable/user_item_press">
                <ImageView
                    android:id="@+id/add_business_license"
                    android:contentDescription="@string/desc"
                    android:layout_width="100dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:layout_height="100dp"
                    android:background="@drawable/ic_launcher"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/bank"/>
            <RelativeLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_item_press">
                <EditText
                    android:id="@+id/bank_account"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:textColor="#777777"
                    android:textColorHint="#ffdddddd"
                    android:textSize="20sp"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/bank_account"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/store_location"/>

            <LinearLayout

                android:id="@+id/get_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_item_press">
                <ImageView
                    android:contentDescription="@string/desc"
                    android:layout_width="16dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_launcher"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bbutton_info_edge"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/get_location"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/scope_of_delivery"/>
            <RelativeLayout
                android:id="@+id/choose_scope"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_item_press">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerInParent="true"

                    android:textColor="#747675"
                    android:textSize="20sp"
                    android:text="@string/choose_scope"/>


            </RelativeLayout>

            <com.promotioner.main.View.Button.BootstrapButton
                android:id="@+id/add_finish"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:clickable="true"
                android:layout_margin="10dp"
                android:layout_centerInParent="true"

                android:text="@string/add_finish"
                bootstrapbutton:bb_text_gravity="center"
                bootstrapbutton:bb_type="info" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
