<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/name"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_itemtop_press">
                <EditText
                    android:id="@+id/merchants_name"
                    android:paddingLeft="10dp"
                    android:textCursorDrawable="@null"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#777777"
                    android:textColorHint="#ffdddddd"
                    android:textSize="20sp"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/merchants_name"/>
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_itembottom_press">
                <EditText
                    android:id="@+id/store_name"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:textColor="#777777"
                    android:textColorHint="#ffdddddd"
                    android:textSize="20sp"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/store_name"/>
                、
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/idcard"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:background="@drawable/ic_more_item_default">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/add_idcard_front"
                        android:contentDescription="@string/desc"
                        android:layout_width="fill_parent"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_height="fill_parent"
                        android:background="@drawable/add"
                        />
                    <TextView
                        android:id="@+id/front_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/front_page"
                        android:textSize="15sp"
                        android:layout_centerInParent="true"
                        android:paddingTop="40dp"
                        android:textColor="#747675"
                        />
                    </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/add_idcard_back"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/desc"
                        android:layout_width="fill_parent"
                        android:layout_margin="10dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/add"
                       />
                    <TextView
                        android:id="@+id/back_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/back_page"
                        android:textSize="15sp"
                        android:layout_centerInParent="true"
                        android:paddingTop="40dp"
                        android:textColor="#747675"
                        />
                    </RelativeLayout>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/business_license"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:background="@drawable/ic_more_item_default">
                <ImageView
                    android:id="@+id/add_business_license"
                    android:contentDescription="@string/desc"
                    android:layout_width="200dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:layout_height="100dp"
                    android:background="@drawable/add"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/bank"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_item_press">
                <EditText
                    android:id="@+id/bank_account"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:textColor="#777777"
                    android:inputType="phone"
                    android:textColorHint="#ffdddddd"
                    android:textSize="20sp"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/bank_account"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/store_location"/>

            <LinearLayout
                android:id="@+id/get_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_item_press">
                <ImageView
                    android:contentDescription="@string/desc"
                    android:layout_width="16dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/gps"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#1877A2"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/get_location"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/scope_of_delivery"/>


            <Spinner
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/spinner_radius"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#747675"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/phone"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_item_press">
                <EditText
                    android:id="@+id/phonenumber"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:inputType="phone"
                    android:textColor="#777777"
                    android:textColorHint="#ffdddddd"
                    android:textSize="20sp"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/number"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="3dp">
                <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
                    android:id="@+id/add_finish_progressbar"
                    android:layout_width="fill_parent"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    />
            </RelativeLayout>

            <com.promotioner.main.View.Button.BootstrapButton
                android:id="@+id/add_finish"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:clickable="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_centerInParent="true"
                android:text="@string/add_finish"
                bootstrapbutton:bb_text_gravity="center"
                bootstrapbutton:bb_type="info" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
