<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:scrollbars="none"

        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/lkm"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcomeback"
                android:textSize="25sp"
                android:textColor="#7D96A4"
                />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="3dp">
                <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
                    android:id="@+id/login_progressbar"
                    android:layout_width="100dp"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    />
                </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_marginTop="40dp"
                android:layout_height="1dp"
                android:background="#CBCBCB"
                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                >
                <EditText
                    android:id="@+id/login_phonenumber"
                    android:layout_marginLeft="30dp"
                    android:textCursorDrawable="@null"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:inputType="phone"
                    android:gravity="center_vertical"
                    android:textColor="#777777"
                    android:layout_gravity="center_vertical"
                    android:textColorHint="#ffdddddd"
                    android:textSize="25sp"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/phonenumber"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:background="#CBCBCB"
                    />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_marginLeft="30dp"
                    android:textCursorDrawable="@null"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:textColor="#777777"
                    android:layout_gravity="center_vertical"
                    android:textColorHint="#ffdddddd"
                    android:textSize="25sp"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/password"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#CBCBCB"
                />


            <com.promotioner.main.View.Button.BootstrapButton
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:clickable="true"
                android:layout_margin="20dp"
                android:text="@string/login"
                bootstrapbutton:bb_text_gravity="center"
                bootstrapbutton:bb_type="info" />
       </LinearLayout>
    </ScrollView>
</RelativeLayout>
